/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.4.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
    // GraalVM Native Build Tools: compile the application into a single native binary.
    alias(libs.plugins.graalvm.native)
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation(libs.junit.jupiter)

    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

    // This dependency is used by the application.
    implementation(libs.guava)

    // Gson is used to read/write the safetensors JSON header.
    implementation(libs.gson)

    // Picocli powers the command-line interface.
    implementation(libs.picocli)

    // Generates GraalVM reflection/resource metadata for the picocli command at compile time so the
    // CLI works in a native image without hand-written configuration.
    annotationProcessor(libs.picocli.codegen)
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    // Define the main class for the application.
    mainClass = "dev.alvo.JGPT"
}

tasks.named<JavaExec>("run") {
    // Connect the console's stdin so the interactive REPL can read user input.
    standardInput = System.`in`
}

tasks.withType<JavaCompile>().configureEach {
    // Tell the picocli annotation processor where to emit the generated native-image metadata.
    options.compilerArgs.add("-Aproject=dev.alvo/jgpt")
}

// Configure the GraalVM native binary.
//
// Build it with:   ./gradlew nativeCompile      (binary at app/build/native/nativeCompile/jgpt)
// Build & run it:  ./gradlew nativeRun --args="--data path/to/data.txt"
//
// Requires a GraalVM JDK on the build machine; the plugin selects a GraalVM toolchain automatically.
graalvmNative {
    // Pull serialization/reflection metadata for third-party libraries (Gson) and the JDK from the
    // shared GraalVM reachability-metadata repository.
    metadataRepository {
        enabled = true
    }

    binaries {
        named("main") {
            imageName = "jgpt"
            mainClass = "dev.alvo.JGPT"
            buildArgs.add("-O3")
        }
    }
}

// Note: the interactive REPL needs a real console stdin. Gradle's `nativeRun` task runs the binary
// with an empty stdin, so for interactive use run the produced binary directly:
//   ./gradlew nativeCompile && ./app/build/native/nativeCompile/jgpt --model some-model.safetensors

tasks.named<Test>("test") {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
